8247533: SA stack walking sometimes fails with sun.jvm.hotspot.debugger.DebuggerException: get_thread_regs failed for a lwp

Reviewed-by: sspitsyn, ysuenaga, dtitov