src/jdk.hotspot.agent/share/classes/sun/jvm/hotspot/debugger/linux/LinuxThread.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -73,8 +73,12 @@ class LinuxThread implements ThreadProxy {
     public ThreadContext getContext() throws IllegalThreadStateException {
         long[] data = debugger.getThreadIntegerRegisterSet(lwp_id);
         ThreadContext context = LinuxThreadContextFactory.createThreadContext(debugger);
-        for (int i = 0; i < data.length; i++) {
-            context.setRegister(i, data[i]);
+        // null means we failed to get the register set for some reason. The caller
+        // is responsible for dealing with the set of null registers in that case.
+        if (data != null) {
+            for (int i = 0; i < data.length; i++) {
+                context.setRegister(i, data[i]);
+            }
         }
         return context;
     }
